--- a/oldFight/AndroidManifest.xml
+++ b/oldFight/AndroidManifest.xml
@@ -11,10 +11,10 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name">
+        
         <activity
-            android:name="com.dongdong.oldfight.MainActivity"
+            android:name="com.dongdong.oldfight.MenuActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name="com.dongdong.oldfight.MainActivity"></activity>
+        <activity android:name="com.dongdong.oldfight.EndActivity"></activity>
     </application>
 
 </manifest>
