--- a/oldFight/bin/AndroidManifest.xml
+++ b/oldFight/bin/AndroidManifest.xml
@@ -25,6 +25,14 @@
         
         <activity android:name="com.dongdong.oldfight.MainActivity"></activity>
         <activity android:name="com.dongdong.oldfight.EndActivity"></activity>
+        
+        <meta-data android:name="APP_ID" android:value="c72772256ff51e87b6915195bfef189c" />
+        <meta-data android:name="APP_PID" android:value="baidu" />
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.GET_TASKS" /> 
 </manifest>
