--- a/oldFight/bin/AndroidManifest.xml
+++ b/oldFight/bin/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon128"
         android:label="@string/app_name">
         
         <activity
