--- a/oldFight/AndroidManifest.xml
+++ b/oldFight/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dongdong.oldfight"
-    android:versionCode="2"
-    android:versionName="2.0" >
+    android:versionCode="3"
+    android:versionName="2.1" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -15,7 +15,9 @@
         
         <activity
             android:name="com.dongdong.oldfight.MenuActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
